fix map on mobile

--- a/src/assets/sass/_popup.scss
+++ b/src/assets/sass/_popup.scss
@@ -7,6 +7,11 @@
     position: absolute;
     top: 2px;
     right: 5px;
+
+    .more-info-popup {
+      right: 1rem;
+    }
+
     .close {
       display: block !important;
       width: 8px;
